--- a/crm-frontend/src/pages/entry/entry.style.css
+++ b/crm-frontend/src/pages/entry/entry.style.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(0,62,81);
+    background-color: rgb(20,36,52);
 }
 
 .formContainer{
@@ -44,3 +44,52 @@
     display: flex;
     align-items: center;
 }
+
+.registerButton{
+    margin-top: 10px;
+    border-color: transparent;
+    border-radius: 2px;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    background-color:#00bfa6e7;
+    display: flex;
+    align-items: center;
+}
+.registerButton:hover{
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 8px 22px 0 rgba(0, 0, 0, 0.19);
+}
+.registerLink:hover{
+    text-decoration: none;
+}
+
+.backToLoginButton{
+    margin-top: 50px;
+    border-color: transparent;
+    border-radius: 2px;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    background-color:#00bfa6e7;
+    display: flex;
+    align-items: center;
+}
+.backToLoginButton:hover{
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 8px 22px 0 rgba(0, 0, 0, 0.19);
+}
+
+.googleButton{
+    margin-top: 30px;
+    background-color: white;
+    border-color: transparent;
+    border-radius: 6px;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.863);
+}
+.googleButton:hover{
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 8px 22px 0 rgba(0, 0, 0, 0.19);}
+
+
+
+
